[AMQ-7442] Support JDK11 full build and code style (#647)