@@ -19,7 +19,6 @@ package org.apache.activemq.broker.jmx;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
 import java.lang.reflect.Method;
-import java.rmi.AccessException;
 import java.rmi.AlreadyBoundException;
 import java.rmi.NoSuchObjectException;
 import java.rmi.NotBoundException;
@@ -27,7 +26,6 @@ import java.rmi.Remote;
 import java.rmi.RemoteException;
 import java.rmi.registry.Registry;
 import java.rmi.server.UnicastRemoteObject;
-import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -58,7 +56,7 @@ import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
 
 /**
- * An abstraction over JMX mbean registration
+ * An abstraction over JMX MBean registration
  *
  * @org.apache.xbean.XBean
  *
@@ -80,9 +78,10 @@ public class ManagementContext implements Service {
         try {
             option = System.getProperty("org.apache.activemq.broker.jmx.createConnector", "false");
         } catch (Exception ex) {
+            // no-op
         }
 
-        DEFAULT_CREATE_CONNECTOR = Boolean.valueOf(option);
+        DEFAULT_CREATE_CONNECTOR = Boolean.parseBoolean(option);
     }
 
     public static final boolean DEFAULT_CREATE_CONNECTOR;
@@ -106,7 +105,7 @@ public class ManagementContext implements Service {
     private JMXConnectorServer connectorServer;
     private ObjectName namingServiceObjectName;
     private Registry registry;
-    private final Map<ObjectName, ObjectName> registeredMBeanNames = new ConcurrentHashMap<ObjectName, ObjectName>();
+    private final Map<ObjectName, ObjectName> registeredMBeanNames = new ConcurrentHashMap<>();
     private boolean allowRemoteAddressInMBeanNames = true;
     private String brokerName;
     private String suppressMBean;
@@ -134,17 +133,17 @@ public class ManagementContext implements Service {
                 connectorHost = "localhost";
             }
 
-            // force mbean server to be looked up, so we have it
+            // force MBean server to be looked up, so we have it
             getMBeanServer();
 
             if (connectorServer != null) {
                 try {
                     if (getMBeanServer().isRegistered(namingServiceObjectName)) {
-                        LOG.debug("Invoking start on mbean: {}", namingServiceObjectName);
+                        LOG.debug("Invoking start on MBean: {}", namingServiceObjectName);
                         getMBeanServer().invoke(namingServiceObjectName, "start", null, null);
                     }
-                } catch (Throwable ignore) {
-                    LOG.debug("Error invoking start on MBean {}. This exception is ignored.", namingServiceObjectName, ignore);
+                } catch (Throwable t) {
+                    LOG.debug("Error invoking start on MBean {}. This exception is ignored.", namingServiceObjectName, t);
                 }
 
                 Thread t = new Thread("JMX connector") {
@@ -221,7 +220,7 @@ public class ManagementContext implements Service {
                 } catch (IOException e) {
                     LOG.warn("Failed to stop jmx connector: {}", e.getMessage());
                 }
-                // stop naming service mbean
+                // stop naming service MBean
                 try {
                     if (namingServiceObjectName != null && getMBeanServer().isRegistered(namingServiceObjectName)) {
                         LOG.debug("Stopping MBean {}", namingServiceObjectName);
@@ -229,8 +228,8 @@ public class ManagementContext implements Service {
                         LOG.debug("Unregistering MBean {}", namingServiceObjectName);
                         getMBeanServer().unregisterMBean(namingServiceObjectName);
                     }
-                } catch (Throwable ignore) {
-                    LOG.warn("Error stopping and unregsitering MBean {} due to {}", namingServiceObjectName, ignore.getMessage());
+                } catch (Throwable t) {
+                    LOG.warn("Error stopping and unregistering MBean {} due to {}", namingServiceObjectName, t.getMessage());
                 }
                 namingServiceObjectName = null;
             }
@@ -302,8 +301,6 @@ public class ManagementContext implements Service {
 
     /**
      * Set the MBeanServer
-     *
-     * @param beanServer
      */
     public void setMBeanServer(MBeanServer beanServer) {
         this.beanServer = beanServer;
@@ -355,8 +352,6 @@ public class ManagementContext implements Service {
     /**
      * Formulate and return the MBean ObjectName of a custom control MBean
      *
-     * @param type
-     * @param name
      * @return the JMX ObjectName of the MBean, or <code>null</code> if
      *         <code>customName</code> is invalid.
      */
@@ -374,7 +369,6 @@ public class ManagementContext implements Service {
     /**
      * The ':' and '/' characters are reserved in ObjectNames
      *
-     * @param in
      * @return sanitized String
      */
     private static String sanitizeString(String in) {
@@ -389,12 +383,6 @@ public class ManagementContext implements Service {
 
     /**
      * Retrieve an System ObjectName
-     *
-     * @param domainName
-     * @param containerName
-     * @param theClass
-     * @return the ObjectName
-     * @throws MalformedObjectNameException
      */
     public static ObjectName getSystemObjectName(String domainName, String containerName, Class<?> theClass) throws MalformedObjectNameException, NullPointerException {
         String tmp = domainName + ":" + "type=" + theClass.getName() + ",name=" + getRelativeName(containerName, theClass);
@@ -456,9 +444,6 @@ public class ManagementContext implements Service {
 
     /**
      * Unregister an MBean
-     *
-     * @param name
-     * @throws JMException
      */
     public void unregisterMBean(ObjectName name) throws JMException {
         ObjectName actualName = this.registeredMBeanNames.get(name);
@@ -538,9 +523,6 @@ public class ManagementContext implements Service {
 
     /**
      * @return an MBeanServer instance
-     * @throws NullPointerException
-     * @throws MalformedObjectNameException
-     * @throws IOException
      */
     protected MBeanServer createMBeanServer() throws MalformedObjectNameException, IOException {
         MBeanServer mbeanServer = MBeanServerFactory.createMBeanServer(jmxDomainName);
@@ -551,12 +533,7 @@ public class ManagementContext implements Service {
         return mbeanServer;
     }
 
-    /**
-     * @param mbeanServer
-     * @throws MalformedObjectNameException
-     * @throws IOException
-     */
-    private void createConnector(MBeanServer mbeanServer) throws MalformedObjectNameException, IOException {
+    private void createConnector(MBeanServer mbeanServer) throws IOException {
         // Create the NamingService, needed by JSR 160
         try {
             if (registry == null) {
@@ -569,10 +546,10 @@ public class ManagementContext implements Service {
             // Do not use the createMBean as the mx4j jar may not be in the
             // same class loader than the server
             Class<?> cl = Class.forName("mx4j.tools.naming.NamingService");
-            mbeanServer.registerMBean(cl.newInstance(), namingServiceObjectName);
+            mbeanServer.registerMBean(cl.getDeclaredConstructor().newInstance(), namingServiceObjectName);
 
             // set the naming port
-            Attribute attr = new Attribute("Port", Integer.valueOf(connectorPort));
+            Attribute attr = new Attribute("Port", connectorPort);
             mbeanServer.setAttribute(namingServiceObjectName, attr);
         } catch(ClassNotFoundException e) {
             LOG.debug("Probably not using JRE 1.4: {}", e.getLocalizedMessage());
@@ -707,15 +684,15 @@ public class ManagementContext implements Service {
         }
 
         @Override
-        public void bind(String s, Remote remote) throws RemoteException, AlreadyBoundException, AccessException {
+        public void bind(String s, Remote remote) throws RemoteException, AlreadyBoundException {
         }
 
         @Override
-        public void unbind(String s) throws RemoteException, NotBoundException, AccessException {
+        public void unbind(String s) throws RemoteException {
         }
 
         @Override
-        public void rebind(String s, Remote remote) throws RemoteException, AccessException {
+        public void rebind(String s, Remote remote) throws RemoteException {
         }
 
         @Override
